fix(*): Small patches for thread icons, marking as read, scrollbars
Summary:
fix(scrollbars): overflow-y, not overflow

fix(participants): Overflow not set correctly on participants

fix(thread-list): Don't show reply or fw icon for unsent drafts

Remove bad code for updating sidebar drafts

Mark as read in MessageStore so that receiving new messages while viewing a thread re-marks it as read

Don't show messages I send with the "Reply" icon

Test Plan: Run tests

Reviewers: evan

Reviewed By: evan

Differential Revision: https://review.inboxapp.com/D1418

--- a/internal_packages/composer/stylesheets/composer.less
+++ b/internal_packages/composer/stylesheets/composer.less
@@ -87,7 +87,7 @@
   }
 
   .tokenizing-field.to {
-    padding-right: 120px;
+    padding-right: 160px;
   }
 
   input, textarea, div[contenteditable] {
@@ -282,6 +282,8 @@ body.is-blurred .composer-inner-wrap .tokenizing-field .token {
   .participant {
     white-space: nowrap;
     text-overflow: ellipsis;
+    overflow: hidden;
+
     .participant-primary {
       font-weight: @font-weight-semi-bold;
     }
