--- a/internal_packages/message-templates/stylesheets/message-templates.less
+++ b/internal_packages/message-templates/stylesheets/message-templates.less
@@ -6,7 +6,7 @@
 .template-picker .menu {
     .content-container {
         height:150px;
-        overflow:scroll;
+        overflow-y:scroll;
     }
 }
 
