--- a/static/components/list-tabular.less
+++ b/static/components/list-tabular.less
@@ -71,7 +71,7 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
 
   .list-item {
     font-size: @font-size-base;
